--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>ikelvin.co - Home</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -59,14 +59,14 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Brandon Johnson</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <h1>Kelvin Morrison</h1>
+      <p>I'm not just <span class="typed" data-typed-items="Amazing, a Developer, a Freelancer, an Artist, Ur Average Billionaire in his Amazing Broke Days, Ur next BF(If u're a hot Barbie of course), with the best teams in the world"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/kelvinninja1" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://facebook.com/kelvinninja1" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://instagram.com/kelvinninja1" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://skype.com/kelvinninja1_1" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="https://linkedin.com/ikelvin-studios" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -313,9 +313,9 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Apps/Web/Platform</li>
+              <li data-filter=".filter-card">Games</li>
+              <li data-filter=".filter-web">Works</li>
             </ul>
           </div>
         </div>
@@ -692,17 +692,17 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
+      <h3>Kelvin Morrison</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/kelvinninja1" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://facebook.com/kelvinninja1" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://instagram.com/kelvinninja1" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://skype.com/kelvinninja1_1" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="https://linkedin.com/ikelvin-studios" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>ikelvin.co</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
