Added: Minor changes

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Kelvin Morrison</h1>
-      <p>I'm not just <span class="typed" data-typed-items="Amazing, a Developer, a Freelancer, an Artist, Ur Average Billionaire in his Amazing Broke Days, Ur next BF(If u're a hot Barbie of course), with the best teams in the world"></span></p>
+      <p>I'm not just <span class="typed" data-typed-items="Amazing, a Developer, a Freelancer, an Artist, Ur Average Billionaire in his Amazing Broke Days, with the best teams in the world"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/kelvinninja1" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://facebook.com/kelvinninja1" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://instagram.com/kelvinninja1" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://skype.com/kelvinninja1_1" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="https://linkedin.com/ikelvin-studios" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://linkedin.com/ikelvin-studios" class="custom"><i class="bx bxl-wordpress">Pages</i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -97,7 +98,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 2 July 1998</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> ikelvin.co</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> ()+233) 55 183 8987</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (+233) 55 749 2027</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Location:</strong>Koforidua, Ghana, Africa, Earth, Milky-Way Galaxy</li>
                 </ul>
               </div>
@@ -105,7 +106,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> HND</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> sale@ikelvin.co</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> man@ikelvin.co</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
