Added: Fix to contact details

--- a/index.html
+++ b/index.html
@@ -633,23 +633,23 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Koforidua, Ghana, Africa, Earth, Milky-Way Galaxy</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p><a href="mailto:man@ikelvin.co">man@ikelvin.co</a></p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p><a href="tel:+233551838987">(+233) 55 749 2027</a></p>
               </div>
 
             </div>
-
+          
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
