--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <a href="https://facebook.com/kelvinninja1" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://instagram.com/kelvinninja1" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://skype.com/kelvinninja1_1" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="https://linkedin.com/ikelvin-studios" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://linkedin.com/ikelvin-studios" class="custom"><i class="bx bxl-wordpress">Pages</i></a>
+        <a href="https://www.linkedin.com/in/kelvin-morrison-48abba193/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://ikelvin.co/pages" class="custom"><i class="bx bxl-wordpress">Pages</i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -649,7 +649,7 @@
               </div>
 
             </div>
-          
+
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
@@ -700,7 +700,8 @@
         <a href="https://facebook.com/kelvinninja1" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://instagram.com/kelvinninja1" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://skype.com/kelvinninja1_1" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="https://linkedin.com/ikelvin-studios" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/kelvin-morrison-48abba193/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://ikelvin.co/pages" class="custom"><i class="bx bxl-wordpress">Pages</i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>ikelvin.co</span></strong>. All Rights Reserved
